--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-native-community/checkbox",
   "version": "0.5.8",
-  "description": "React Native Checkbox native modules for Android , iOS and Windows",
+  "description": "React Native Checkbox native modules for Android , iOS",
   "keywords": [
     "checkbox",
     "react native",
@@ -36,7 +36,6 @@
     "prettier": "^2.0.5",
     "react": "16.11.0",
     "react-native": "0.62",
-    "react-native-windows": "^0.62",
     "react-test-renderer": "16.9.0",
     "ts-jest": "^24.2.0",
     "typescript": "^3.8.3",
@@ -44,8 +43,7 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": ">= 0.62",
-    "react-native-windows": ">=0.62"
+    "react-native": ">= 0.62"
   },
   "publishConfig": {
     "access": "public"
