--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     /* Basic Options */
     "incremental": false,                   /* Enable incremental compilation */
-    "target": "es5",  
-    "lib":["es6"],                      
+    "target": "es5",
+    "lib":["es6"],
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     "jsx": "react",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     "declaration": true,                   /* Generates corresponding '.d.ts' file. */
@@ -14,7 +14,7 @@
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
     "baseUrl": "./",
-    "paths": {"*":["*","*.ios","*.android", "*.windows"]},                  /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+    "paths": {"*":["*","*.ios","*.android"]},                  /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     "esModuleInterop": true                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
   },
   "exclude": [
